SQuirreL SQL Client Change Log
==============================

${squirrelsql.changelog.header}

Not yet released, available in our GIT repository and in future snapshots and releases.
===============================================================================================

Bug fixes:

#1130 Unable to save SQLReadOn properties


3.5.1 (02/01/2014)
==================

Enhancements:

File export: Replaced the old xls export by the newer xlsx export which allows far mor rows to export.
   Thanks to André Schild for the patch.
   This also fixes bug #625

#1108 (in bugs): New entry in table's right mouse menu: Copy column names

Upgraded to the latest RSyntax version (2.5.0 / 3).

Added MongoDB driver to default driver list.


New Plugin: Vertica DB Plugin
  New Plugin for the Vertica DB. Thanks to Vertica team.


Added Vertica driver to default driver list.

Fixed bug in windows start script squirrel-sql.bat: javaw.exe could not be found in certain cases.

Fixed bug in Oracle dialect concerning type information for timestamps.

#1084 Added MariaDB driver to default driver list.

Made data editing problems that concern update row counts more transparent by printing
  out details to SQuirreL's message panel. This may help to fix bugs like #1086.

Bug fixes:

SQL editors keyboard short cut to comment block (Ctrl-) didn't work.

#1064 DataSetViewerTextPanel cannot be cast to DataSetViewerTablePanel

Fixed NullPointer during shutdown:
java.lang.IllegalArgumentException: obj parameter must not be null
    at net.sourceforge.squirrel_sql.client.gui.recentfiles.RecentFilesManager.saveXmlBean(RecentFilesManager.java:84)
    at net.sourceforge.squirrel_sql.client.Application._saveApplicationState(Application.java:302)
    at net.sourceforge.squirrel_sql.client.Application.shutdown(Application.java:240)
    at net.sourceforge.squirrel_sql.client.gui.mainframe.MainFrame.dispose(MainFrame.java:141)