@@ -324,9 +324,9 @@ action.net.sourceforge.squirrel_sql.client.mainframe.action.TileVerticalAction.r
 action.net.sourceforge.squirrel_sql.client.mainframe.action.TileVerticalAction.name=Tile Vertically
 action.net.sourceforge.squirrel_sql.client.mainframe.action.TileVerticalAction.tooltip=Tile Windows Vertically
 
-action.net.sourceforge.squirrel_sql.client.mainframe.action.UpdateAction.image=tango/system-software-update-16x16.png
-action.net.sourceforge.squirrel_sql.client.mainframe.action.UpdateAction.name=Software Update
-action.net.sourceforge.squirrel_sql.client.mainframe.action.UpdateAction.tooltip=Look for / install updates
+#action.net.sourceforge.squirrel_sql.client.mainframe.action.UpdateAction.image=tango/system-software-update-16x16.png
+#action.net.sourceforge.squirrel_sql.client.mainframe.action.UpdateAction.name=Software Update
+#action.net.sourceforge.squirrel_sql.client.mainframe.action.UpdateAction.tooltip=Look for / install updates
 
 action.net.sourceforge.squirrel_sql.client.mainframe.action.ViewAliasesAction.image=
 action.net.sourceforge.squirrel_sql.client.mainframe.action.ViewAliasesAction.name=View Aliases
@@ -772,8 +772,8 @@ menuitem.net.sourceforge.squirrel_sql.client.mainframe.action.TileHorizontalActi
 menuitem.net.sourceforge.squirrel_sql.client.mainframe.action.TileVerticalAction.accelerator=
 menuitem.net.sourceforge.squirrel_sql.client.mainframe.action.TileVerticalAction.mnemonic=V
 
-menuitem.net.sourceforge.squirrel_sql.client.mainframe.action.UpdateAction.accelerator=
-menuitem.net.sourceforge.squirrel_sql.client.mainframe.action.UpdateAction.mnemonic=
+#menuitem.net.sourceforge.squirrel_sql.client.mainframe.action.UpdateAction.accelerator=
+#menuitem.net.sourceforge.squirrel_sql.client.mainframe.action.UpdateAction.mnemonic=
 
 menuitem.net.sourceforge.squirrel_sql.client.mainframe.action.ViewAliasesAction.accelerator= control shift A
 menuitem.net.sourceforge.squirrel_sql.client.mainframe.action.ViewAliasesAction.mnemonic=A
