@@ -6,9 +6,13 @@ ${squirrelsql.changelog.header}
 Not yet released, available in our GIT repository and in future snapshots and releases.
 ===============================================================================================
 
+Note: Automatic updates were disabled in this snapshot release. Please use our home page to download latest versions and snapshots.
+
 Bug fixes:
 
 #1130 Unable to save SQLReadOn properties
+
+
 
 
 3.5.1 (02/01/2014)
